sam-internal/k8s-out/yul/yul-flowsnake_prod/madkub-injector-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
  name: madkub-injector-webhook
  namespace: flowsnake
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUY3ekNDQTllZ0F3SUJBZ0lVQVFNZ0VaQ2tBZnhJV1pUZ1EzZms0ak9RRW00d0RRWUpLb1pJaHZjTkFRRUwKQlFBd2dZc3hDekFKQmdOVkJBWVRBbFZUTVJNd0VRWURWUVFJREFwRFlXeHBabTl5Ym1saE1SWXdGQVlEVlFRSApEQTFUWVc0Z1JuSmhibU5wYzJOdk1SMHdHd1lEVlFRS0RCUnpZV3hsYzJadmNtTmxMbU52YlN3Z2FXNWpMakV3Ck1DNEdBMVVFQXd3bmMyRnNaWE5tYjNKalpTNWpiMjBnU1c1MFpYSnVZV3dnVW05dmRDQkRRU0F5SUVsdVpuSmgKTUI0WERURTNNRGN5T0RFNU5UQXhNbG9YRFRJeU1EY3lOekU1TlRBeE1sb3dnWTh4Q3pBSkJnTlZCQVlUQWxWVApNUk13RVFZRFZRUU [...]
    service:
      name: madkub-injector
      namespace: flowsnake
      path: /
  failurePolicy: Fail
  name: madkub-injector.flowsnake.sfdc.net
  namespaceSelector:
    matchLabels:
      madkub-injector: enabled
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
